Generate bootable image for DragonBoard 410c
The boot loader on the DragonBoard 410c requires images to be in a
specific format.  Generate a bootable image using the skales tools.
More details can be found in board/qualcomm/dragonboard410c/readme.txt

--- a/debian/rules
+++ b/debian/rules
@@ -50,6 +50,16 @@ override_dh_auto_build:
 			echo $$builddir/u-boot-spl.rksd /usr/lib/u-boot/$$platform/ \
 				>> debian/build/targets.$$subarch; \
 			;; \
+		qcom) \
+			touch $$builddir/rd; \
+			skales-dtbtool -o $$builddir/dt.img $$builddir/arch/arm/dts; \
+			skales-mkbootimg --kernel $$builddir/u-boot-dtb.bin \
+				--output=$$builddir/u-boot.img --dt=$$builddir/dt.img \
+				--pagesize 2048 --base 0x80000000 \
+				--ramdisk=$$builddir/rd --cmdline=""; \
+			echo $$builddir/u-boot.img /usr/lib/u-boot/$$platform/ \
+				>> debian/build/targets.$$subarch; \
+			;; \
 	        esac; \
 	done
 
