--- a/debian/control
+++ b/debian/control
@@ -3,132 +3,11 @@ Section: admin
 Priority: optional
 Maintainer: Vagrant Cascadian <vagrant@debian.org>
 Uploaders: Loïc Minier <lool@debian.org>, Clint Adams <clint@debian.org>
-Build-Depends: debhelper (>= 9.20141010), bc, device-tree-compiler, dpkg-dev (>= 1.17.14), python:any [armhf], skales:native [arm64], libfdt-dev:native [arm64]
+Build-Depends: debhelper (>= 9.20141010), bc, device-tree-compiler, dpkg-dev (>= 1.17.14), python:any [armhf], libssl-dev
 Standards-Version: 3.9.8
 Homepage: http://www.denx.de/wiki/U-Boot/
 Vcs-Git: https://anonscm.debian.org/git/collab-maint/u-boot.git
 Vcs-Browser: https://anonscm.debian.org/cgit/collab-maint/u-boot.git/
-
-Package: u-boot
-Architecture: armel armhf avr32 mips sh4
-Multi-Arch: same
-Depends: ${misc:Depends},
- u-boot-imx [armhf], u-boot-omap [armhf], u-boot-sunxi [armhf], u-boot-exynos [armhf]
-Description: A boot loader for embedded systems
- Das U-Boot is a cross-platform bootloader for embedded systems,
- used as the default boot loader by several board vendors.  It is
- intended to be easy to port and to debug, and runs on many
- supported architectures, including PPC, ARM, MIPS, x86, m68k,
- NIOS, and Microblaze.
- ${uboot:platforms}
-
-Package: u-boot-imx
-Architecture: armhf
-Multi-Arch: same
-Depends: ${misc:Depends}
-Breaks: u-boot (<< 2014.10~rc2+dfsg1-2~)
-Replaces: u-boot (<< 2014.10~rc2+dfsg1-2~)
-Description: A boot loader for imx systems
- Das U-Boot is a cross-platform bootloader for embedded systems,
- used as the default boot loader by several board vendors.  It is
- intended to be easy to port and to debug, and runs on many
- supported architectures, including PPC, ARM, MIPS, x86, m68k,
- NIOS, and Microblaze.
- .
- This package includes boot loaders for various imx platforms.
- ${uboot:platforms}
-
-Package: u-boot-qcom
-Architecture: arm64
-Multi-Arch: same
-Depends: ${misc:Depends}
-Description: A boot loader for qcom systems
- Das U-Boot is a cross-platform bootloader for embedded systems,
- used as the default boot loader by several board vendors.  It is
- intended to be easy to port and to debug, and runs on many
- supported architectures, including PPC, ARM, MIPS, x86, m68k,
- NIOS, and Microblaze.
- .
- This package includes boot loaders for various qcom platforms.
- ${uboot:platforms}
-
-Package: u-boot-tegra
-Architecture: armhf arm64
-Multi-Arch: same
-Depends: ${misc:Depends}
-Breaks: u-boot (<< 2014.10~rc2+dfsg1-2~)
-Replaces: u-boot (<< 2014.10~rc2+dfsg1-2~)
-Description: A boot loader for NVIDIA Tegra systems
- Das U-Boot is a cross-platform bootloader for embedded systems,
- used as the default boot loader by several board vendors.  It is
- intended to be easy to port and to debug, and runs on many
- supported architectures, including PPC, ARM, MIPS, x86, m68k,
- NIOS, and Microblaze.
- .
- This package includes boot loaders for various NVIDIA Tegra platforms.
- ${uboot:platforms}
-
-Package: u-boot-omap
-Architecture: armhf
-Multi-Arch: same
-Depends: ${misc:Depends}
-Breaks: u-boot (<< 2014.10~rc2+dfsg1-2~)
-Replaces: u-boot (<< 2014.10~rc2+dfsg1-2~)
-Description: A boot loader for omap systems
- Das U-Boot is a cross-platform bootloader for embedded systems,
- used as the default boot loader by several board vendors.  It is
- intended to be easy to port and to debug, and runs on many
- supported architectures, including PPC, ARM, MIPS, x86, m68k,
- NIOS, and Microblaze.
- .
- This package includes boot loaders for various omap and related
- platforms.
- ${uboot:platforms}
-
-Package: u-boot-sunxi
-Architecture: armhf arm64
-Multi-Arch: same
-Depends: ${misc:Depends}
-Breaks: u-boot (<< 2014.10~rc2+dfsg1-2~)
-Replaces: u-boot (<< 2014.10~rc2+dfsg1-2~)
-Description: A boot loader for sunxi systems
- Das U-Boot is a cross-platform bootloader for embedded systems,
- used as the default boot loader by several board vendors.  It is
- intended to be easy to port and to debug, and runs on many
- supported architectures, including PPC, ARM, MIPS, x86, m68k,
- NIOS, and Microblaze.
- .
- This package includes boot loaders for various Allwinner/sunxi
- platforms.
- ${uboot:platforms}
-
-Package: u-boot-exynos
-Architecture: armhf
-Multi-Arch: same
-Depends: ${misc:Depends}
-Description: A boot loader for exynos systems
- Das U-Boot is a cross-platform bootloader for embedded systems,
- used as the default boot loader by several board vendors.  It is
- intended to be easy to port and to debug, and runs on many
- supported architectures, including PPC, ARM, MIPS, x86, m68k,
- NIOS, and Microblaze.
- .
- This package includes boot loaders for various Exynos platforms.
- ${uboot:platforms}
-
-Package: u-boot-rockchip
-Architecture: armhf
-Multi-Arch: same
-Depends: ${misc:Depends}
-Description: A boot loader for rockchip systems
- Das U-Boot is a cross-platform bootloader for embedded systems,
- used as the default boot loader by several board vendors.  It is
- intended to be easy to port and to debug, and runs on many
- supported architectures, including PPC, ARM, MIPS, x86, m68k,
- NIOS, and Microblaze.
- .
- This package includes boot loaders for various Rockchip platforms.
- ${uboot:platforms}
 
 Package: u-boot-rpi
 Architecture: armel armhf arm64
