--- a/debian/rules
+++ b/debian/rules
@@ -27,42 +27,14 @@ LDFLAGS := $(patsubst -Wl$(comma)%,%,$(LDFLAGS))
 
 override_dh_auto_build: TOOLSDIR := debian/build/tools
 override_dh_auto_build:
-	set -e; sed -n 's/^$(DEB_HOST_ARCH)[[:space:]]\+//p' debian/targets \
-	    | while read subarch platform targets; do \
-	        builddir=debian/build/$$platform; \
-		targets="$$targets uboot.elf" ;\
-	        mkdir -p $$builddir; \
-		$(MAKE) O=$$builddir $${platform}_defconfig; \
-		$(MAKE) $(DEB_UBOOT_FLAGS) O=$$builddir all; \
-		install -m 644 $$builddir/u-boot $$builddir/uboot.elf; \
-	        $(CROSS_COMPILE)strip --remove-section=.comment \
-	            $$builddir/uboot.elf; \
-		for target in $$targets; do \
-			chmod -x $$builddir/$$target; \
-			echo $$builddir/$$target /usr/lib/u-boot/$$platform/ \
-				>> debian/build/targets.$$subarch; \
-			echo $$platform >> debian/build/platforms.$$subarch; \
-		done ; \
-	        case $${subarch} in \
-		rockchip) \
-			$$builddir/tools/mkimage -T rksd -n rk3288 \
-				-d $$builddir/spl/u-boot-spl.bin $$builddir/u-boot-spl.rksd; \
-			echo $$builddir/u-boot-spl.rksd /usr/lib/u-boot/$$platform/ \
-				>> debian/build/targets.$$subarch; \
-			;; \
-		qcom) \
-			touch $$builddir/rd; \
-			skales-dtbtool -o $$builddir/dt.img $$builddir/arch/arm/dts; \
-			skales-mkbootimg --kernel $$builddir/u-boot-dtb.bin \
-				--output=$$builddir/u-boot.img --dt=$$builddir/dt.img \
-				--pagesize 2048 --base 0x80000000 \
-				--ramdisk=$$builddir/rd --cmdline=""; \
-			echo $$builddir/u-boot.img /usr/lib/u-boot/$$platform/ \
-				>> debian/build/targets.$$subarch; \
-			;; \
-	        esac; \
-	done
-
+	mkdir -p debian/build/rpi
+	$(MAKE) O=debian/build/rpi rpi_defconfig
+	$(MAKE) $(DEB_UBOOT_FLAGS) O=debian/build/rpi -j $(nproc --all || echo 1) all
+	echo rpi >> debian/build/platforms.rpi
+	chmod -x debian/build/rpi/u-boot.bin
+	echo debian/build/rpi/u-boot.bin /boot/ >> debian/build/targets.rpi
+	echo debian/bcm2708-rpi-b.dtb /boot >> debian/build/targets.rpi
+	echo debian/config.txt /boot >> debian/build/targets.rpi
 	# Avoid requirement for .config
 	mkdir -p $(TOOLSDIR)/include/config
 	touch $(TOOLSDIR)/include/config/auto.conf
@@ -81,9 +53,10 @@ override_dh_auto_build:
 	$(CROSS_COMPILE)strip --remove-section=.comment $(TOOLSDIR)/tools/env/fw_printenv
 	$(CROSS_COMPILE)strip --remove-section=.comment $(TOOLSDIR)/tools/mkimage
 	$(CROSS_COMPILE)strip --remove-section=.comment $(TOOLSDIR)/tools/mkenvimage
-	$(CROSS_COMPILE)strip --remove-section=.comment $(TOOLSDIR)/tools/kwboot
-	$(CROSS_COMPILE)strip --remove-section=.comment $(TOOLSDIR)/tools/mksunxiboot
 	$(CROSS_COMPILE)strip --remove-section=.comment $(TOOLSDIR)/tools/dumpimage
+	$(TOOLSDIR)/tools/mkimage -A arm -O linux -T script -C none \
+		-n debian/boot.scr -d debian/boot.scr debian/build/rpi/boot.scr.uimg
+	echo debian/build/rpi/boot.scr.uimg /boot/ >> debian/build/targets.rpi
 
 override_dh_auto_test:
 	# skip tests.
